# Electro

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  ElectroLayout.ini  LICENSE  README.md  imgui.ini  premake5.lua
Electro/: CMakeLists.txt  premake5.lua
Electro/src/: Electro.hpp  epch.cpp  epch.hpp
Electro/src/Asset/: AssetBase.cpp  AssetBase.hpp  AssetEnums.hpp  AssetExtensions.hpp  AssetManager.cpp  AssetManager.hpp  AssetMetadata.hpp  AssetRegistry.cpp  AssetRegistry.hpp  AssetSerializer.cpp  AssetSerializer.hpp  ElectroAssetManager.cpp  ElectroAssetManager.hpp
Electro/src/Core/: Application.cpp  Application.hpp  Base.hpp  Buffer.hpp  ElectroApplication.cpp  ElectroApplication.hpp  ElectroBase.hpp  ElectroBuffer.hpp  ElectroEntryPoint.hpp  ElectroInput.hpp  ElectroKeyCodes.hpp  ElectroLayer.cpp  ElectroLayer.hpp  ElectroLayerStack.cpp  ElectroLayerStack.hpp  ElectroLog.cpp  ElectroLog.hpp  ElectroModule.cpp  ElectroModule.hpp  ElectroModuleManager.cpp  ElectroModuleManager.hpp  ElectroRef.hpp  ElectroSplashWindow.hpp  ElectroTimestep.hpp  ElectroUUID.cpp  ElectroUUID.hpp  ElectroVault.cpp  ElectroVault.hpp  ElectroWindow.hpp  EntryPoint.hpp  FileSystem.hpp  Input.hpp  KeyCodes.hpp  Layer.hpp  LayerManager.cpp  LayerManager.hpp  Log.cpp  Log.hpp  Module.hpp  ModuleManager.cpp  (+8 more)
Electro/src/EDevice/: EDevice.cpp  EDevice.hpp
Electro/src/GUI/: ElectroImGuiBuild.cpp  ElectroImGuiLayer.cpp  ElectroImGuiLayer.hpp  ElectroImGuiModule.cpp  ElectroImGuiModule.hpp  ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.hpp  ImGuiModule.cpp  ImGuiModule.hpp
Electro/src/Math/: BoundingBox.hpp  ElectroMath.cpp  ElectroMath.hpp  Math.cpp
Electro/src/Physics/: ContactListener.cpp  ContactListener.hpp  ElectroPhysXInternal.cpp  ElectroPhysXInternal.hpp  ElectroPhysXUtils.cpp  ElectroPhysXUtils.hpp  ElectroPhysicsActor.cpp  ElectroPhysicsActor.hpp  ElectroPhysicsEngine.cpp  ElectroPhysicsEngine.hpp  ElectroPhysicsLayer.cpp  ElectroPhysicsLayer.hpp  PhysXInternal.cpp  PhysXInternal.hpp  PhysXUtils.cpp  PhysXUtils.hpp  PhysicsActor.cpp  PhysicsActor.hpp  PhysicsEngine.cpp  PhysicsEngine.hpp  PhysicsMaterial.hpp  PhysicsMeshSerializer.cpp  PhysicsMeshSerializer.hpp
Electro/src/Project/: Project.hpp  ProjectManager.cpp  ProjectManager.hpp  ProjectSerializer.cpp  ProjectSerializer.hpp
Electro/src/Renderer/: Cascades.cpp  Cascades.hpp  EGenerator.cpp  EGenerator.hpp  ElectroCamera.hpp  ElectroConstantBuffer.cpp  ElectroConstantBuffer.hpp  ElectroEditorCamera.cpp  ElectroEditorCamera.hpp  ElectroEnvironmentMap.cpp  ElectroEnvironmentMap.hpp  ElectroFramebuffer.cpp  ElectroFramebuffer.hpp  ElectroGraphicsContext.hpp  ElectroIndexBuffer.cpp  ElectroIndexBuffer.hpp  ElectroMaterial.cpp  ElectroMaterial.hpp  ElectroMesh.cpp  ElectroMesh.hpp  ElectroMeshFactory.cpp  ElectroMeshFactory.hpp  ElectroPipeline.cpp  ElectroPipeline.hpp  ElectroRenderCommand.cpp  ElectroRenderCommand.hpp  ElectroRenderer.cpp  ElectroRenderer.hpp  ElectroRenderer2D.cpp  ElectroRenderer2D.hpp  ElectroRendererAPI.cpp  ElectroRendererAPI.hpp  ElectroRendererAPISwitch.hpp  ElectroRendererDebug.cpp  ElectroRendererDebug.hpp  ElectroSceneRenderer.cpp  ElectroSceneRenderer.hpp  ElectroShader.cpp  ElectroShader.hpp  ElectroShaderCompiler.cpp  (+38 more)
Electro/src/RumtimeExporter/: CurrentAppPath.cpp  CurrentAppPath.hpp  RuntimeExporter.cpp  RuntimeExporter.hpp
Electro/src/Scene/: ComponentCallbacks.hpp  Components.hpp  ElectroComponents.hpp  ElectroEntity.hpp  ElectroLightningHandeler.cpp  ElectroLightningHandeler.hpp  ElectroScene.cpp  ElectroScene.hpp  ElectroSceneCamera.cpp  ElectroSceneCamera.hpp  ElectroSceneManager.cpp  ElectroSceneManager.hpp  ElectroSceneSerializer.cpp  ElectroSceneSerializer.hpp  Entity.hpp  LightningHandeler.cpp  LightningHandeler.hpp  Scene.cpp  Scene.hpp  SceneCamera.cpp  SceneCamera.hpp  SceneManager.cpp  SceneManager.hpp  SceneSerializer.cpp  SceneSerializer.hpp
Electro/src/Scripting/: ElectroMonoUtils.cpp  ElectroMonoUtils.hpp  ElectroScriptEngine.cpp  ElectroScriptEngine.hpp  ElectroScriptRegistry.cpp  ElectroScriptRegistry.hpp  ElectroScriptWrappers.cpp  ElectroScriptWrappers.hpp  Fields.cpp  Fields.hpp  MonoUtils.cpp  MonoUtils.hpp  ScriptEngine.cpp  ScriptEngine.hpp  ScriptRegistry.cpp  ScriptWrappers.cpp  ScriptWrappers.hpp
Electro/src/Utility/: Clock.hpp  ElectroFileDialogs.cpp  ElectroFileDialogs.hpp  Random.hpp  StringUtils.cpp  StringUtils.hpp  YamlHelpers.cpp  YamlHelpers.hpp
ElectroEditor/: CMakeLists.txt  premake5.lua
ElectroEditor/assets/scenes/: 3DExample.spike  ScriptingTest.spike
ElectroEditor/src/: EditorApp.cpp  EditorLayer.cpp  EditorLayer.hpp  EditorModule.cpp  EditorModule.hpp  ElectroEditorApp.cpp  ElectroEditorLayer.cpp  ElectroEditorLayer.hpp  ElectroEditorModule.cpp  ElectroEditorModule.hpp  ElectroUIMacros.hpp  FontAwesome.hpp  PanelManager.cpp  PanelManager.hpp  UIMacros.hpp
ElectroEditor/src/Panels/: AssetImportPopup.cpp  AssetImportPopup.hpp  AssetRegistryPanel.cpp  AssetRegistryPanel.hpp  AssetsPanel.cpp  AssetsPanel.hpp  CodeEditorPanel.cpp  CodeEditorPanel.hpp  ConsolePanel.cpp  ConsolePanel.hpp  ElectroAssetsPanel.cpp  ElectroConsolePanel.cpp  ElectroConsolePanel.hpp  ElectroMaterialPanel.cpp  ElectroMaterialPanel.hpp  ElectroPhysicsSettingsPanel.cpp  ElectroPhysicsSettingsPanel.hpp  ElectroProfilerPanel.cpp  ElectroProfilerPanel.hpp  ElectroSceneHierarchyPanel.cpp  ElectroSceneHierarchyPanel.hpp  ElectroVaultPanel.cpp  ElectroVaultPanel.hpp  IPanel.hpp  InspectorPanel.cpp  InspectorPanel.hpp  MaterialPanel.cpp  MaterialPanel.hpp  PhysicsSettingsPanel.cpp  PhysicsSettingsPanel.hpp  ProfilerPanel.cpp  ProfilerPanel.hpp  ProjectSettingsPanel.cpp  ProjectSettingsPanel.hpp  RendererSettingsPanel.cpp  RendererSettingsPanel.hpp  (+2 more)
ElectroRuntime/: CMakeLists.txt
ElectroRuntime/Source/: RuntimeLayer.cpp  RuntimeModule.cpp
ElectroScript-Core/: CMakeLists.txt  premake5.lua
ExampleApp/: CMakeLists.txt  GenExample.bat  premake5.lua
ExampleApp/src/: Camera.cs  CameraController.cs  Enemy.cs  ExampleApp.cpp  Player.cs
(+181 files in other folders)
